--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <script src="task-03-01.js"></script>
+    <!-- <script src="task-03-01.js"></script> -->
+    <script src="task-03-02.js"></script>
     
 </body>
 </html>
