--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="task-03-01.js"></script> -->
     <!-- <script src="task-03-02.js"></script> -->
     <!-- <script src="task-03-03.js"></script> -->
+    <script src="task-03-04.js"></script>
     
 </body>
 </html>
