--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="task-03-02.js"></script> -->
     <!-- <script src="task-03-03.js"></script> -->
     <!-- <script src="task-03-04.js"></script> -->
-    <script src="task-03-05.js"></script>
+    <!-- <script src="task-03-05.js"></script> -->
+    <script src="task-03-06.js"></script>
     
 </body>
 </html>
